--- a/docs/docs-ref-autogen/outlook_1_3/outlook/office.coerciontypeoptions.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/outlook/office.coerciontypeoptions.yml
@@ -1,34 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.CoercionTypeOptions:interface'
-    summary: 提供数据格式的选项。
-    name: Office.CoercionTypeOptions
-    fullName: Office.CoercionTypeOptions
-    langs:
-      - typeScript
-    type: interface
-    package: outlook!
-    children:
-      - 'outlook!Office.CoercionTypeOptions#coercionType:member'
-  - uid: 'outlook!Office.CoercionTypeOptions#coercionType:member'
-    summary: 所需的数据格式。
-    name: coercionType
-    fullName: coercionType
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'coercionType?: Office.CoercionType | string;'
-      return:
-        type:
-          - 'outlook!Office.CoercionTypeOptions#coercionType~0:complex'
-references:
-  - uid: 'outlook!Office.CoercionTypeOptions#coercionType~0:complex'
-    name: Office.CoercionType | string
-    fullName: Office.CoercionType | string
-    spec.typeScript:
-      - uid: 'office!Office.CoercionType:enum'
-        name: Office.CoercionType
-        fullName: Office.CoercionType
-      - name: ' | string'
-        fullName: ' | string'
+### YamlMime:TSType
+name: Office.CoercionTypeOptions
+uid: outlook!Office.CoercionTypeOptions:interface
+package: outlook!
+fullName: Office.CoercionTypeOptions
+summary: 提供数据格式的选项。
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: coercionType
+  uid: outlook!Office.CoercionTypeOptions#coercionType:member
+  package: outlook!
+  fullName: coercionType
+  summary: 所需的数据格式。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'coercionType?: Office.CoercionType | string;'
+    return:
+      type: <xref uid="office!Office.CoercionType:enum" /> | string
+metadata:
+  ms.openlocfilehash: e7e6d887fa5b2ae43a209f3498b7003f7654e595
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49150699"
