--- a/docs/docs-ref-autogen/outlook_1_3/outlook/office.itemcompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/outlook/office.itemcompose.yml
@@ -1,24 +1,18 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.ItemCompose:interface'
-    summary: |-
-      " [Context.subname](xref:outlook!Office.Item:interface) " 的撰写模式<!-- -->.
-
-      **重要说明**：这是一个内部 Outlook 对象，而不是直接通过现有接口公开。 应将此视为的模式`Office.context.mailbox.item`<!-- -->. 有关详细信息，请参阅[对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.3/office.context.mailbox.item)页。
-
-      子接口：
-
-      - [AppointmentCompose](xref:outlook!Office.AppointmentCompose:interface)
-
-      - [MessageCompose](xref:outlook!Office.MessageCompose:interface)
-    name: Office.ItemCompose
-    fullName: Office.ItemCompose
-    langs:
-      - typeScript
-    type: interface
-    extends:
-      - 'outlook!Office.Item:interface'
-    package: outlook!
-references:
-  - uid: 'outlook!Office.Item:interface'
-    name: Item
+### YamlMime:TSType
+name: Office.ItemCompose
+uid: outlook!Office.ItemCompose:interface
+package: outlook!
+fullName: Office.ItemCompose
+summary: "\" [Context.subname](xref:outlook!Office.Item:interface) \" 的撰写模式<!-- -->.\n\n**重要说明**：这是一个内部 Outlook 对象，而不是直接通过现有接口公开。 应将此视为的模式 `Office.context.mailbox.item`<!-- -->. 有关详细信息，请参阅 [对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.3/office.context.mailbox.item) 页。\n\n子接口：\n\n- [AppointmentCompose](xref:outlook!Office.AppointmentCompose:interface)\n\n- [MessageCompose](xref:outlook!Office.MessageCompose:interface)"
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+extends: <xref uid="outlook!Office.Item:interface" />
+metadata:
+  ms.openlocfilehash: b6319c708d76b3f494589dac9388bd58797ffa50
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49150587"
