--- a/docs/docs-ref-autogen/visio/visio/visio.interfaces.applicationdata.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.interfaces.applicationdata.yml
@@ -1,43 +1,50 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'visio!Visio.Interfaces.ApplicationData:interface'
-    summary: 描述通过调用 "toJSON （）" 返回的数据的接口。
-    name: Visio.Interfaces.ApplicationData
-    fullName: Visio.Interfaces.ApplicationData
-    langs:
-      - typeScript
-    type: interface
-    package: visio!
-    children:
-      - 'visio!Visio.Interfaces.ApplicationData#showBorders:member'
-      - 'visio!Visio.Interfaces.ApplicationData#showToolbars:member'
-  - uid: 'visio!Visio.Interfaces.ApplicationData#showBorders:member'
-    summary: |-
-      显示或隐藏 iFrame 应用程序边框。
+### YamlMime:TSType
+name: Visio.Interfaces.ApplicationData
+uid: visio!Visio.Interfaces.ApplicationData:interface
+package: visio!
+fullName: Visio.Interfaces.ApplicationData
+summary: '一个接口，该接口描述通过调用 "toJSON ( # A1" 返回的数据。'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: showBorders
+  uid: visio!Visio.Interfaces.ApplicationData#showBorders:member
+  package: visio!
+  fullName: showBorders
+  summary: >-
+    显示或隐藏 iFrame 应用程序边框。
 
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: showBorders
-    fullName: showBorders
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showBorders?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'visio!Visio.Interfaces.ApplicationData#showToolbars:member'
-    summary: |-
-      显示或隐藏标准工具栏。
 
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: showToolbars
-    fullName: showToolbars
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showToolbars?: boolean;'
-      return:
-        type:
-          - boolean
+    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showBorders?: boolean;'
+    return:
+      type: boolean
+- name: showToolbars
+  uid: visio!Visio.Interfaces.ApplicationData#showToolbars:member
+  package: visio!
+  fullName: showToolbars
+  summary: >-
+    显示或隐藏标准工具栏。
+
+
+    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showToolbars?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 28b00f9a876b67b65534a9a1b18912d574c7704d
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49150300"
